# todo-cli

./: CMakeLists.txt  Doxyfile  Makefile  README.md
docs/: actions_8cpp.html  actions_8cpp__incl.map  actions_8cpp__incl.md5  actions_8h.html  actions_8h__incl.map  actions_8h__incl.md5  actions_8h_source.html  annotated.html  annotated_dup.js  basic__view_8cpp.html  basic__view_8cpp.js  basic__view_8cpp__incl.map  basic__view_8cpp__incl.md5  basic__view_8h.html  basic__view_8h.js  basic__view_8h__dep__incl.map  basic__view_8h__dep__incl.md5  basic__view_8h__incl.map  basic__view_8h__incl.md5  basic__view_8h_source.html  class_todo_1_1_basic_view-members.html  class_todo_1_1_basic_view.html  class_todo_1_1_basic_view.js  class_todo_1_1_basic_view__inherit__graph.map  class_todo_1_1_basic_view__inherit__graph.md5  class_todo_1_1_controller-members.html  class_todo_1_1_controller.html  class_todo_1_1_controller.js  class_todo_1_1_i_view-members.html  class_todo_1_1_i_view.html  class_todo_1_1_i_view.js  class_todo_1_1_i_view__coll__graph.map  class_todo_1_1_i_view__coll__graph.md5  class_todo_1_1_model-members.html  class_todo_1_1_model.html  class_todo_1_1_model.js  class_todo_1_1_view-members.html  class_todo_1_1_view.html  class_todo_1_1_view.js  class_todo_1_1_view__inherit__graph.map  (+167 more)
docs/latex/: actions_8cpp__incl.md5  actions_8h__incl.md5  (+83 more)
src/: basic_view.cpp  basic_view.h  controller.cpp  controller.h  main.cpp  model.cpp  model.h  status.h  todo_controller.cpp  todo_controller.h  todo_list.cpp  todo_list.h  todo_view.cpp  todo_view.h  types.h  view.cpp  view.h
(+63 files in other folders)
